cmake_minimum_required (VERSION 2.6)
project (BinarySearchTree)
set(CMAKE_CXX_STANDARD 11)
include_directories(BinarySearchTree)
set(SOURCES BinarySearchTree/main.cpp BinarySearchTree/main.cpp BinarySearchTree/Person.cpp BinarySearchTree/BinarySearchTree.h BinarySearchTree/Tree.h BinarySearchTree/Person.h)
add_executable(BinarySearchTree ${SOURCES})