cmake_minimum_required (VERSION 2.6)
project (DepthFirstSearch)
set(CMAKE_CXX_STANDARD 11)
include_directories(DepthFirstSearch)
set(SOURCES DepthFirstSearch/main.cpp DepthFirstSearch/main.cpp DepthFirstSearch/DepthFirstSearch.cpp DepthFirstSearch/DepthFirstSearch.h DepthFirstSearch/Vertex.h DepthFirstSearch/Vertex.cpp)
add_executable(DepthFirstSearch ${SOURCES})